--- a/autocomplete/package.json
+++ b/autocomplete/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.3.1",
+    "react-d3-tree": "^3.6.2",
     "react-dom": "^18.3.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
