--- a/autocomplete/package.json
+++ b/autocomplete/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack",
+    "test": "jest",
+    "clear": "rm -rf node_modules dist && yarn cache clean",
     "docker build": "docker build -t zahramaslavi/autocomplete-react .",
     "docker run": "docker run -p 3000:3000 zahramaslavi/autocomplete-react"
   },
@@ -32,5 +34,15 @@
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "ts-jest": "^29.2.5",
+    "babel-jest": "^29.7.0",
+    "@types/jest": "^29.5.13",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
