--- a/autocomplete-node/tsconfig.json
+++ b/autocomplete-node/tsconfig.json
@@ -11,6 +11,8 @@
     "resolveJsonModule": true,            // Allows importing JSON modules
     "typeRoots": ["./node_modules/@types"] // Look for types in node_modules/@types
   },
-  "include": ["src/**/*.ts", "tests/**/*.ts"],              // Include all .ts files in the src and tests folders
-  "exclude": ["node_modules"]              // Exclude node_modules from compilation
+  "include": ["src/**/*.ts", "src/tests/**/*.ts", "src/tests/index.test.js"],              // Include all .ts files in the src and tests folders
+  "exclude": ["node_modules"],             // Exclude node_modules from compilation
+  "typeRoots": ["./types", "./node_modules/@types"],
+  "types": ["node", "express"]
 }
