more test coverage ont trieRedis

--- a/autocomplete-node/docker-compose.yaml
+++ b/autocomplete-node/docker-compose.yaml
@@ -3,7 +3,12 @@ services:
   redis-server:
     image: 'redis'
   autocompletenode:
+    restart: always
     build: .
     ports:
       - '3001:3001'
+    volumes:
+      - /app/node_modules
+      - .:/app
+    container_name: zahramaslavi/autocomplete-be
   
